--- a/src/ians_navigation/config/base_local_planner_params.yaml
+++ b/src/ians_navigation/config/base_local_planner_params.yaml
@@ -1,12 +1,17 @@
 TrajectoryPlannerROS:
-	max_vel_x: 0.5
-	min_vel_x: 0.01
-	max_vel_theta: 1.5
-	min_in_place_vel_theta: 0.01
+  max_vel_x: 1.0
+  min_vel_x: 0.5 
+  max_vel_theta: 4.0
 
-	acc_lim_theta: 1.5
-	acc_lim_x: 0.5
-	acc_lim_y: 0.5
+  min_in_place_vel_theta: -4.0
+  
+  escape_vel: -2.0
+  
+  acc_lim_theta: 4 
+  acc_lim_x: 1.0 
+  acc_lim_y: 1.0 
 
-	holonomic_robot: false
+  holonomic_robot: false
+  vtheta_samples: 10 
+  vx_samples: 4 
 
