--- a/src/ians_control/CMakeLists.txt
+++ b/src/ians_control/CMakeLists.txt
@@ -18,6 +18,10 @@ find_package(catkin REQUIRED COMPONENTS
     roscpp
     rospy
     std_msgs
+    genmsg
+    actionlib
+    actionlib_msgs
+    geometry_msgs
 )
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -136,7 +140,8 @@ ${catkin_INCLUDE_DIRS}
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
- add_executable(${PROJECT_NAME}_server src/server_interface.cpp)
+ add_executable(${PROJECT_NAME}_server server_interface.cpp)
+ add_executable(${PROJECT_NAME}_set_nav_goal set_nav_goal.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,13 +152,17 @@ ${catkin_INCLUDE_DIRS}
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_set_nav_goal ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(${PROJECT_NAME}_server
+target_link_libraries(${PROJECT_NAME}_server 
    ${catkin_LIBRARIES}
    mosquitto
  )
 
+target_link_libraries(${PROJECT_NAME}_set_nav_goal
+   ${catkin_LIBRARIES}
+ )
 #############
 ## Install ##
 #############
