--- a/src/ians_control/CMakeLists.txt
+++ b/src/ians_control/CMakeLists.txt
@@ -141,7 +141,7 @@ ${catkin_INCLUDE_DIRS}
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
  add_executable(${PROJECT_NAME}_server server_interface.cpp)
- add_executable(${PROJECT_NAME}_set_nav_goal set_nav_goal.cpp)
+ #add_executable(${PROJECT_NAME}_set_nav_goal set_nav_goal.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -152,7 +152,7 @@ ${catkin_INCLUDE_DIRS}
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(${PROJECT_NAME}_set_nav_goal ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(${PROJECT_NAME}_set_nav_goal ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_server 
@@ -160,9 +160,9 @@ target_link_libraries(${PROJECT_NAME}_server
    mosquitto
  )
 
-target_link_libraries(${PROJECT_NAME}_set_nav_goal
-   ${catkin_LIBRARIES}
- )
+#target_link_libraries(${PROJECT_NAME}_set_nav_goal
+#   ${catkin_LIBRARIES}
+# )
 #############
 ## Install ##
 #############
